--- a/templates/vivense.xml
+++ b/templates/vivense.xml
@@ -4,9 +4,9 @@
         {% for product in products %}
         <Product>
             <ProductCode>{{ product.code }}</ProductCode>
-            <ProductName>{{ product.name }}</ProductName>
-            <MainCategory>{{ product.vendor.category }}</MainCategory>
-			<Category>{{ product.category }}</Category>
+            <ProductName><![CDATA[{{ product.name }}]]></ProductName>
+            <MainCategory><![CDATA[{{ product.vendor.category }}]]></MainCategory>
+			<Category><![CDATA[{{ product.category }}]]></Category>
             {{product.features_html}}
             <VariationGroup>{{ product.variant_group }}</VariationGroup>
             <VariationFeatures>
@@ -19,8 +19,8 @@
             <stock>{{ stock }}</stock>
 			<Description><![CDATA[{{ product.description|safe }}]]></Description>
             <Images>{% for img in product.images %}{{ img }}{% if not loop.last %},{% endif %}{% endfor %}</Images>
-            <Vendor>{{ product.vendor.nickname }}</Vendor>
-            <URL>{{ product.url }}</URL>
+            <Vendor><![CDATA[{{ product.vendor.nickname }}]]></Vendor>
+            <URL><![CDATA[{{ product.url }}]]></URL>
         </Product>{% endfor %}
     </Products>
 </Root>
