--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -320,7 +320,7 @@
                                 tr += "<td><span class='badge light badge-success'><i class='fa fa-circle text-success me-1'></i>Updated</span></td>";
                                 tr += "<td>" + data[i].last_update + "</td>";
                             } else {
-                                tr += "<td><span class='badge light badge-warning'><i class='fa fa-circle text-warning me-1'></i>Auto</span></td>";
+                                tr += "<td><span class='badge badge-light'><i class='fa fa-circle text-dark me-1'></i>Default</span></td>";
                                 tr += "<td></td>";
                             }
 
