--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -255,7 +255,12 @@
 
     <!-- Custom JavaScript -->
     <script>
+        var current_page = 1;
+        var current_per_page = 25;
         function getTranslations(page, per_page) {
+
+                current_page = page;
+                current_per_page = per_page;
                 // Clear the existing table content.
                 $('#translation-table tbody').empty();
 
@@ -286,55 +291,53 @@
                         // Clear the existing pagination links.
                         $('#pagination').empty();
 
-                        console.log(data.total);
-                        console.log(data.per_page);
                         // Generate pagination links.
                         // Calculate the total number of pages.
-    var totalPages = Math.ceil(data.total / data.per_page);
+                        var totalPages = Math.ceil(data.total / data.per_page);
 
-    // Determine the range of pages to display.
-    var startPage = Math.max(data.page, 1);
-    var endPage = Math.min(startPage + 3, totalPages);
+                        // Determine the range of pages to display.
+                        var startPage = Math.max(data.page, 1);
+                        var endPage = Math.min(startPage + 3, totalPages);
 
-    // Generate '<<' link for the first page.
-    if (data.page > 0) {
-        var li = "<li class='page-item'>" +
-                    "<a class='page-link' href='javascript:void(0)' onclick='getTranslations(0, " + data.per_page + ")'><<</a>" +
-                 "</li>";
-        $('#pagination').append(li);
-    }
+                        // Generate '<<' link for the first page.
+                        if (data.page > 0) {
+                            var li = "<li class='page-item'>" +
+                                        "<a class='page-link' href='javascript:void(0)' onclick='getTranslations(0, " + data.per_page + ")'><<</a>" +
+                                     "</li>";
+                            $('#pagination').append(li);
+                        }
 
-    // Generate '<' link for the previous page.
-    if (data.page > 0) {
-        var li = "<li class='page-item'>" +
-                    "<a class='page-link' href='javascript:void(0)' onclick='getTranslations(" + (data.page - 1) + ", " + data.per_page + ")'><</a>" +
-                 "</li>";
-        $('#pagination').append(li);
-    }
+                        // Generate '<' link for the previous page.
+                        if (data.page > 0) {
+                            var li = "<li class='page-item'>" +
+                                        "<a class='page-link' href='javascript:void(0)' onclick='getTranslations(" + (data.page - 1) + ", " + data.per_page + ")'><</a>" +
+                                     "</li>";
+                            $('#pagination').append(li);
+                        }
 
-    // Generate page links.
-    for (var i = startPage; i <= endPage; i++) {
-        var li = "<li class='page-item" + (i === data.page + 1 ? " active" : "") + "'>" +
-                    "<a class='page-link' href='javascript:void(0)' onclick='getTranslations(" + (i - 1) + ", " + data.per_page + ")'>" + i + "</a>" +
-                 "</li>";
-        $('#pagination').append(li);
-    }
+                        // Generate page links.
+                        for (var i = startPage; i <= endPage; i++) {
+                            var li = "<li class='page-item" + (i === data.page + 1 ? " active" : "") + "'>" +
+                                        "<a class='page-link' href='javascript:void(0)' onclick='getTranslations(" + (i - 1) + ", " + data.per_page + ")'>" + i + "</a>" +
+                                     "</li>";
+                            $('#pagination').append(li);
+                        }
 
-    // Generate '>' link for the next page.
-    if (data.page + 1 < totalPages) {
-        var li = "<li class='page-item'>" +
-                    "<a class='page-link' href='javascript:void(0)' onclick='getTranslations(" + (data.page + 1) + ", " + data.per_page + ")'>></a>" +
-                 "</li>";
-        $('#pagination').append(li);
-    }
+                        // Generate '>' link for the next page.
+                        if (data.page + 1 < totalPages) {
+                            var li = "<li class='page-item'>" +
+                                        "<a class='page-link' href='javascript:void(0)' onclick='getTranslations(" + (data.page + 1) + ", " + data.per_page + ")'>></a>" +
+                                     "</li>";
+                            $('#pagination').append(li);
+                        }
 
-    // Generate '>>' link for the last page.
-    if (endPage < totalPages) {
-        var li = "<li class='page-item'>" +
-                    "<a class='page-link' href='javascript:void(0)' onclick='getTranslations(" + (totalPages - 1) + ", " + data.per_page + ")'>>></a>" +
-                 "</li>";
-        $('#pagination').append(li);
-    }
+                        // Generate '>>' link for the last page.
+                        if (endPage < totalPages) {
+                            var li = "<li class='page-item'>" +
+                                        "<a class='page-link' href='javascript:void(0)' onclick='getTranslations(" + (totalPages - 1) + ", " + data.per_page + ")'>>></a>" +
+                                     "</li>";
+                            $('#pagination').append(li);
+                        }
                     },
                     error: function(jqXHR, textStatus, errorThrown) {
                         console.error(textStatus, errorThrown);
@@ -382,7 +385,7 @@
                 $('#editModal').modal('hide');
 
                 // Refresh the translations table.
-                getTranslations();
+                getTranslations(current_page, current_per_page);
             },
             error: function(jqXHR, textStatus, errorThrown) {
                 console.error(textStatus, errorThrown);
