--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -164,7 +164,7 @@
                                     <div class="col-4">
                                     <div class="input-group mb-3">
                                         <input type="text" class="form-control" id="search-input" placeholder="Search">
-                                        <button class="btn btn-outline-primary" type="button" onclick="getTranslations()">Search</button>
+                                        <button class="btn btn-primary" type="button" onclick="getTranslations()">Search</button>
                                     </div>
                                         </div>
                                 </div>
@@ -289,6 +289,7 @@
                     success: function(data) {
 
                         for (var i = 0; i < data.items.length; i++) {
+                            console.log(data.items[i].products);
                             var tr = "<tr data-id='" + data.items[i].id + "'>"; // Storing the translation_id in data-id attribute.
                             tr += "<td>" + data.items[i].source_lang + "</td>";
                             tr += "<td>" + data.items[i].target_lang + "</td>";
